preparando ambiente para subir backend. Ambientes de teste, dev e prod criados.

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -45,6 +45,13 @@
 			<optional>true</optional>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			
+		</dependency>
+
+
 
 		<dependency>
 			<groupId>com.h2database</groupId>
