--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,13 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
-  
-    "file-loader": "^6.2.0",
+    "homepage": "",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
     "react-scripts": "^2.1.3",
-    "url-loader": "^4.1.1",
     "validator": "^13.7.0",
     "web-vitals": "^2.1.4"
   },
