--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
-    "homepage": "",
+    "@testing-library/user-event": "^14.4.3",
+    "axios": "^1.1.3",
+    "homepage": "^1.0.0",
     "loader-utils": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "validator": "^13.7.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
