--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/db_pedido_brinde_test
 spring.datasource.username=postgres
 spring.datasource.password=123456
+spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-spring.jpa.hibernate.ddl-auto=none
+
+
