--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,3 +1,5 @@
-spring.datasource.url=${DB_URL}
+spring.datasource.url=jdbc:mysql://ls-cef9a30f8b7059c338fc20a5a55dbb0e78d4d741.cn0c3b4a9g0x.us-east-1.rds.amazonaws.com/app_inovacao
+spring.datasource.username=dbmasteruser
+spring.datasource.password=mozart3600
 
 spring.jpa.hibernate.ddl-auto=update
