--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "^6.4.4",
     "validator": "^13.7.0",
     "web-vitals": "^3.0.4"
   },
